Contrast fix

--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -47,15 +47,12 @@ button {
 
 .team {
     background-color: var(--primary-color);
+    color: var(--accent2-color);
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 1rem;
     padding: 1rem;
-}
-
-h2 {
-    color: var(--accent2-color);
 }
 
 .members {
